--- a/Medidor/Principal.Master
+++ b/Medidor/Principal.Master
@@ -17,6 +17,14 @@
             </asp:ContentPlaceHolder>
         </div>
         <div class="container-fluid mt-5">
+<asp:Menu ID="Menu1" runat="server" DataSourceID="SiteMapDataSource1"></asp:Menu>
+            <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" />
+<asp:SiteMapPath ID="SiteMapPath1" runat="server" Font-Names="Verdana" Font-Size="0.8em" PathSeparator=" : ">
+    <CurrentNodeStyle ForeColor="#333333" />
+    <NodeStyle Font-Bold="True" ForeColor="#990000" />
+    <PathSeparatorStyle Font-Bold="True" ForeColor="#990000" />
+    <RootNodeStyle Font-Bold="True" ForeColor="#FF8000" />
+            </asp:SiteMapPath>
             <asp:ContentPlaceHolder ID="Contenido" runat="server">
 
             </asp:ContentPlaceHolder>
