--- a/Medidor/Principal.Master
+++ b/Medidor/Principal.Master
@@ -5,7 +5,7 @@
 <html>
 <head runat="server">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -17,16 +17,15 @@
             </asp:ContentPlaceHolder>
         </div>
         <div class="container-fluid mt-5">
-<asp:Menu ID="Menu1" runat="server" DataSourceID="SiteMapDataSource1"></asp:Menu>
+            <asp:Menu ID="Menu1" runat="server" DataSourceID="SiteMapDataSource1" Orientation="Horizontal" StaticDisplayLevels="2"></asp:Menu>
             <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" />
-<asp:SiteMapPath ID="SiteMapPath1" runat="server" Font-Names="Verdana" Font-Size="0.8em" PathSeparator=" : ">
-    <CurrentNodeStyle ForeColor="#333333" />
-    <NodeStyle Font-Bold="True" ForeColor="#990000" />
-    <PathSeparatorStyle Font-Bold="True" ForeColor="#990000" />
-    <RootNodeStyle Font-Bold="True" ForeColor="#FF8000" />
+            <asp:SiteMapPath ID="SiteMapPath1" runat="server" Font-Names="Verdana" Font-Size="0.8em" PathSeparator=" : ">
+                <CurrentNodeStyle ForeColor="#333333" />
+                <NodeStyle Font-Bold="true" ForeColor="#990000" />
+                <PathSeparatorStyle Font-Bold="True" ForeColor="#990000" />
+                <RootNodeStyle Font-Bold="True" ForeColor="#FF8000" />
             </asp:SiteMapPath>
             <asp:ContentPlaceHolder ID="Contenido" runat="server">
-
             </asp:ContentPlaceHolder>
         </div>
     </form>
